--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,29 @@
     <body align="center">
         <form action="/design">
             <h3>Choose 3 Colors:</h3>
-            
+
             <input type="color" id="color1" name="color1">
 
             <input type="color" id="color2" name="color2">
 
             <input type="color" id="color3" name="color3">
+
+            <br><br>
+
+            <h3>Choose the Pattern:</h3>
+            <input type="radio" id="pattern1" name="pattern1">
+            
+            <br>
+
+            <input type="radio" id="pattern2" name="pattern2">
+
+            <br>
+
+            <input type="radio" id="pattern3" name="pattern3">
+
+            <br><br>
+
+            <input type="submit" value="Design">
         </form>
 
     </body>
