--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Friendship Bracelets</title>
+        <link rel="stylesheet" href="static/styles.css">
     </head>
 
     <body align="center">
