--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,13 @@
 body {
     background-color: whitesmoke;
 }
+
+input[type="radio"] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    appearance: none;
+    /* For iOS < 15 to remove gradient background */
+    background-color: #fff;
+    /* Not removed via appearance */
+    margin: 0;
+  }
