added new class, commented out prior class; testing backgrounds

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,16 +2,8 @@ body {
     background-color: whitesmoke;
 }
 
-input[type="radio"] {
-    /* Add if not using autoprefixer */
-    -webkit-appearance: none;
-    appearance: none;
-    /* For iOS < 15 to remove gradient background */
-    background-color: #fff;
-    /* Not removed via appearance */
-    margin: 0;
-}
+/* input[type="radio"] {} */
 
-input[type="radio"]:checked {
-    border: dotted blue solid 2px;
+input[type="radio"]:checked+label {
+    background-color: hsl(172, 67%, 45%);
 }
