--- a/static/styles.css
+++ b/static/styles.css
@@ -2,8 +2,7 @@ body {
     background-color: whitesmoke;
 }
 
-/* input[type="radio"] {} */
-
 input[type="radio"]:checked+label {
-    background-color: hsl(172, 67%, 45%);
+    border: 2px dotted blue;
+    padding: 2px;
 }
