--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,13 @@
             <br><br>
 
             <h3>Choose the Pattern:</h3>
-            <input type="radio" id="pattern1" name="pattern1">
+            <input type="radio" id="pattern1" name="pattern1" value="1">
             <label for="pattern1">1</label>
 
-            <input type="radio" id="pattern2" name="pattern2">
+            <input type="radio" id="pattern2" name="pattern2" value="2">
             <label for="pattern2">2</label>
 
-            <input type="radio" id="pattern3" name="pattern3">
+            <input type="radio" id="pattern3" name="pattern3" value="3">
             <label for="pattern3">3</label>
 
             <br><br>
