update names to be the same

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,14 +20,14 @@
             <br><br>
 
             <h3>Choose the Pattern:</h3>
-            <input type="radio" id="pattern1" name="pattern1" value="1">
-            <label for="pattern1">1</label>
+            <input type="radio" id="pattern" name="pattern" value="1">
+            <label for="pattern">1</label>
 
-            <input type="radio" id="pattern2" name="pattern2" value="2">
-            <label for="pattern2">2</label>
+            <input type="radio" id="pattern" name="pattern" value="2">
+            <label for="pattern">2</label>
 
-            <input type="radio" id="pattern3" name="pattern3" value="3">
-            <label for="pattern3">3</label>
+            <input type="radio" id="pattern" name="pattern" value="3">
+            <label for="pattern">3</label>
 
             <br><br>
 
