update id of radios

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,13 @@
             <br><br>
 
             <h3>Choose the Pattern:</h3>
-            <input type="radio" id="pattern" name="pattern" value="1">
+            <input type="radio" id="pattern1" name="pattern" value="1">
             <label for="pattern">1</label>
 
-            <input type="radio" id="pattern" name="pattern" value="2">
+            <input type="radio" id="pattern2" name="pattern" value="2">
             <label for="pattern">2</label>
 
-            <input type="radio" id="pattern" name="pattern" value="3">
+            <input type="radio" id="pattern3" name="pattern" value="3">
             <label for="pattern">3</label>
 
             <br><br>
