--- a/templates/index.html
+++ b/templates/index.html
@@ -8,31 +8,6 @@
     </head>
 
     <body align="center">
-        <form action="/design">
-            <h3>Choose 3 Colors:</h3>
-
-            <input type="color" id="color1" name="color1">
-
-            <input type="color" id="color2" name="color2">
-
-            <input type="color" id="color3" name="color3">
-
-            <br><br>
-
-            <h3>Choose the Pattern:</h3>
-            <input type="radio" id="pattern1" name="pattern" value="1">
-            <label for="pattern">1</label>
-
-            <input type="radio" id="pattern2" name="pattern" value="2">
-            <label for="pattern">2</label>
-
-            <input type="radio" id="pattern3" name="pattern" value="3">
-            <label for="pattern">3</label>
-
-            <br><br>
-
-            <input type="submit" value="Design">
-        </form>
-
+        <h1>Friendship Bracelet Designer</h1>
     </body>
 </html>
