add a form for generating a pattern

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,7 @@
 
     <body align="center">
         <h1>Friendship Bracelet Designer</h1>
+
+        <form action="/"></form>
     </body>
 </html>
