add colors to form

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,12 @@
     <body align="center">
         <h1>Friendship Bracelet Designer</h1>
 
-        <form action="/"></form>
+        <form action="/generate-pattern">
+            <input type="color" id="color1" name="color1">
+
+            <input type="color" id="color2" name="color2">
+
+            <input type="color" id="color3" name="color3">
+        </form>
     </body>
 </html>
