add a button to be able to submit their colors

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,10 @@
             <input type="color" id="color2" name="color2">
 
             <input type="color" id="color3" name="color3">
+
+            <br><br>
+
+            <input type="submit" value="Use These Colors">
         </form>
     </body>
 </html>
