--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "template.html" %}
 {% block content %}
 
-<form action="/generate-pattern">
+<form action="/generate-pattern" method="post">
     <input type="color" id="color1" name="color1">
 
     <input type="color" id="color2" name="color2">
