--- a/templates/results.html
+++ b/templates/results.html
@@ -5,4 +5,14 @@
 <div class="color-sq2"></div>
 <div class="color-sq3"></div>
 
+<div class="pattern1">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+</div>
+
 {% endblock %}
