add some breaks to have different patterns

--- a/templates/results.html
+++ b/templates/results.html
@@ -9,7 +9,21 @@
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
-    
+
+    <br>
+
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+
+    <br>
+
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+
+    <br>
+
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
