--- a/static/styles.css
+++ b/static/styles.css
@@ -3,9 +3,11 @@ body {
 }
 
 .dot {
-    height: 25px;
-    width: 25px;
+    height: 10px;
+    width: 10px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
+    padding: 0;
+    margin: 0;
   }
