add a div for a row

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,9 +6,11 @@
 <div class="color-sq3"></div>
 
 <div class="pattern1">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 
     <br>
 
