update the following rows to have the same styles

--- a/templates/results.html
+++ b/templates/results.html
@@ -14,21 +14,27 @@
 
     <br>
 
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 
     <br>
 
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 
     <br>
 
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 </div>
 
 {% endblock %}
