--- a/static/styles.css
+++ b/static/styles.css
@@ -8,11 +8,11 @@ body {
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 .row {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
