--- a/templates/results.html
+++ b/templates/results.html
@@ -1,9 +1,11 @@
 {% extends "template.html" %}
 {% block content %}
 
-<div class="color-sq1"></div>
-<div class="color-sq2"></div>
-<div class="color-sq3"></div>
+<div class="chosen-colors">
+    <div class="color-sq1"></div>
+    <div class="color-sq2"></div>
+    <div class="color-sq3"></div>
+</div>
 
 <div class="pattern1">
     <div class="row">
