--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.pattern1 {
+    justify-self: center;
+}
+
 .dot {
     height: 10px;
     width: 10px;
