--- a/templates/results.html
+++ b/templates/results.html
@@ -14,6 +14,9 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
     </div>
 
     <div class="row">
