add 3 more dots to the bracelet emulator

--- a/templates/results.html
+++ b/templates/results.html
@@ -23,15 +23,24 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
-    </div>
-
-    <div class="row">
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
     </div>
 
     <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
