update margins for the patterns

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,14 +4,20 @@ body {
 
 .pattern1 {
     display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .pattern2 {
     display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .pattern3 {
     display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .dot {
