add 3 more dots for another column

--- a/templates/results.html
+++ b/templates/results.html
@@ -192,6 +192,9 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
     </div>
 </div>
 
