--- a/templates/results.html
+++ b/templates/results.html
@@ -138,9 +138,6 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
-    </div>
-
-    <div class="row">
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
@@ -150,9 +147,24 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
     </div>
 
     <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
@@ -162,9 +174,6 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
-    </div>
-
-    <div class="row">
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
@@ -174,15 +183,33 @@
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
-    </div>
-
-    <div class="row">
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
     </div>
 
     <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+    <div class="row">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
