--- a/static/styles.css
+++ b/static/styles.css
@@ -38,6 +38,7 @@ body {
 
 .color-sq1 {
     border: 2px black solid;
+    border-radius: 20%;
     width: 20px;
     height: 20px;
     margin-left: 5px;
@@ -46,6 +47,7 @@ body {
 
 .color-sq2 {
     border: 2px black solid;
+    border-radius: 20%;
     width: 20px;
     height: 20px;
     margin-left: 5px;
@@ -54,6 +56,7 @@ body {
 
 .color-sq3 {
     border: 2px black solid;
+    border-radius: 20%;
     width: 20px;
     height: 20px;
     margin-left: 5px;
