create script.js file and link it to the index.html file

--- a/templates/template.html
+++ b/templates/template.html
@@ -8,6 +8,8 @@
     </head>
 
     <body align="center">
+        <script src="script.js"></script>
+        
         <h1>Friendship Bracelet Designer</h1>
 
         {% block content %} {% endblock %}
