update the colors for the first pattern for the bracelet

--- a/templates/results.html
+++ b/templates/results.html
@@ -2,154 +2,154 @@
 {% block content %}
 
 <div class="chosen-colors">
-    <div class="color-sq1"></div>
-    <div class="color-sq2"></div>
-    <div class="color-sq3"></div>
+    <div class="color-sq1" style="background-color: {{color1}};"></div>
+    <div class="color-sq2" style="background-color: {{color2}};"></div>
+    <div class="color-sq3" style="background-color: {{color3}};"></div>
 </div>
 
 <br><br>
 
 <div class="pattern1">
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-    </div>
-    
-    <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+    </div>
+
+    <div class="row">
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
     </div>
 </div>
 
 <div class="pattern2">
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
     
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 
     <div class="row">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 </div>
 
