--- a/templates/results.html
+++ b/templates/results.html
@@ -73,19 +73,19 @@
 
 <div class="pattern2">
     <div class="row">
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
     </div>
 
     <div class="row">
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color2}};"></div>
+        <div class="dot" style="background-color: {{color1}};"></div>
+        <div class="dot" style="background-color: {{color3}};"></div>
     </div>
 
     <div class="row">
